RESOLVED FIXED307773
[LBSE] Fix gradients with non-invertible gradientTransforms
https://bugs.webkit.org/show_bug.cgi?id=307773
Summary [LBSE] Fix gradients with non-invertible gradientTransforms
Rob Buis
Reported 2026-02-13 01:37:03 PST
Fix gradients with non-invertible gradientTransforms.
Attachments
Rob Buis
Comment 1 2026-02-13 01:59:07 PST
EWS
Comment 2 2026-02-13 04:14:51 PST
Committed 307459@main (b7b809b927db): <https://commits.webkit.org/307459@main> Reviewed commits have been landed. Closing PR #58614 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-13 04:15:12 PST
Note You need to log in before you can comment on or make changes to this bug.