[LBSE] Fix gradients with non-invertible gradientTransforms https://bugs.webkit.org/show_bug.cgi?id=307773

Reviewed by Nikolas Zimmermann.

We should reject gradients with non-invertible gradientTransforms.

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* Source/WebCore/rendering/svg/RenderSVGResourceGradient.cpp:
(WebCore::RenderSVGResourceGradient::buildGradientIfNeeded):

Canonical link: https://commits.webkit.org/307459@main